--- a/style.css
+++ b/style.css
@@ -253,7 +253,8 @@ h1, .display-5 {
 
 .form-control:focus,
 .form-select:focus {
-    background-color: rgba(15, 23, 42, 0.8);
+    background-color: #ffffff;
+    color: #000000;
     border-color: var(--primary-color);
     box-shadow: 0 0 0 3px rgba(99, 102, 241, 0.2);
     transform: translateY(-1px);
